Fixing bug 431280. Sniff the URI file extension for a mimetype to use if the one given in an embed elements type attribute isn't a supported type. r+sr=bzbarsky@mit.edu, a=dsicore@mozilla.com